Fixed responsiveness of overlapping text for small devices by adding line height

--- a/styles.css
+++ b/styles.css
@@ -165,6 +165,7 @@ footer .contact-box p {
 
   .hero h2 {
     font-size: 14px;
+    line-height: 1;
   }
   .hero p {
     font-size: 20px;
